# resonaate

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.gitlab/: .gitlab-ci.yml  README.md  dependabot.yml
.gitlab/ci/: base.gitlab-ci.yml  build.gitlab-ci.yml  check.gitlab-ci.yml  common.gitlab-ci.yml  dependabot.gitlab-ci.yml  deploy.gitlab-ci.yml  publish.gitlab-ci.yml  release.gitlab-ci.yml  rules.gitlab-ci.yml  scheduled.gitlab-ci.yml  scripts.gitlab-ci.yml  security.gitlab-ci.yml  test.gitlab-ci.yml
.gitlab/issue_templates/: Bug Report.md  Bug.md  Default.md  Feature Request.md  Feature.md  bug_report.md  feature_request.md
.gitlab/merge_request_templates/: Bug.md  Default.md  Feature.md  Official Release.md  Release Candidate.md  Release.md  bug.md  feature.md  release_candidate.md
configs/json/: iod_init.json  main_init.json  mmae_init.json  test_gpf.json  test_init.json
configs/json/engines/: all_visible_engine.json  cost_constrained_space.json  cost_constrained_ssn.json  single_target_single_sensor.json  summation_space.json  summation_ssn.json
configs/json/sensor_networks/: dedicated_ssn_network.json  satellite_network.json  single_adv_radar_network.json  single_optical_network.json  single_radar_network.json  ssn_network.json
configs/json/targets/: ISS_target_set.json  geo_only_test_targets.json  large_target_set.json  leo_only_test_targets.json  leo_sun_sync_target_set.json  medium_target_set.json  small_target_set.json
configs/yaml/: main_config.yaml  test_config.yaml  test_init.yaml
configs/yaml/engines/: all_visible_engine.yaml  cost_constrained_ssn.yaml
configs/yaml/sensor_networks/: geo_optical_only_network.yaml  ssn_network.yaml
configs/yaml/targets/: small_target_set.yaml  two_targets.yaml
docs/: Makefile  README.md  requirements.txt
docs/markdown/: initialization.md  interface.md
docs/source/: conf.py  index.md  index.rst  initialization_link.rst  interface_link.rst  license_link.rst
docs/source/_templates/: custom-module.rst
docs/source/background/: astro.md  estimation.md  noise.md  tasking.md
docs/source/development/: ci.md  containers.md  contrib.md  contributing.md  doc_readme.md  gitlab_ci.md  labels.md  releases.md  style.md  test.md  workflow.md
docs/source/examples/: README.rst  plot_two_body.py  plot_ukf_demo.py
docs/source/intro/: install.md  quickstart.md
docs/source/meta/: bibliography.md  changelog.md  license.md  resonaate.bib
docs/source/reference/: api.md  config_format.md  service.md
example_data/json/: main_init.json  test_init.json
example_data/json/engines/: all_visible_engine.json  cost_constrained_space.json  cost_constrained_ssn.json  taskable_engine.json
example_data/json/sensor_networks/: satellite_network.json  single_adv_radar_network.json  single_optical_network.json  single_radar_network.json  ssn_network.json
example_data/json/targets/: ISS_target_set.json  geo_only_test_targets.json  large_target_set.json  leo_only_test_targets.json  medium_target_set.json  small_target_set.json  target_set_small.json
example_data/yaml/sensor_networks/: geo_optical_only_network.yaml
example_data/yaml/targets/: two_targets.yaml
requirements/: development.txt  requirements.txt
src/resonaate/: __init__.py  __main__.py
src/resonaate/agents/: __init__.py  agent_base.py  estimate_agent.py  sensing_agent.py  target_agent.py
src/resonaate/common/: __init__.py  behavioral_config.py  cli.py  default_behavior.config  exceptions.py  labels.py  logger.py  utilities.py
src/resonaate/data/: __init__.py  agent.py  data_interface.py  db_connection.py  detected_maneuver.py  earth_orientation_params.py  ephemeris.py  epoch.py  filter_step.py  importer_database.py  maneuver_detection.py  node_addition.py  (+9 more)
tests/: README.md  __init__.py  conftest.py  example.py  test_job_handlers.py  test_resonaate.py  test_run_resonaate.py
tests/agents/: conftest.py  test_estimate_agent.py
tests/common/: test_cli.py  test_config.py  test_logger.py  test_utilities.py
tests/configs/: test_json_target_config.py
tests/data/: conftest.py  test_agent.py  test_common_queries.py  test_data.py  test_data_interface.py  test_db_connection.py  test_detected_maneuver.py  test_earth_orientation_params.py  test_ephemeris.py  test_epoch.py  test_filter_step.py  test_manual_sensor_task.py  test_missed_observation.py  test_node_addition.py  test_observation.py  test_observation_data.py  test_particle_filter_step.py  test_task.py
tests/dynamics/: test_dynamics.py  test_station_keeping.py
tests/estimation/: test_adaptive_estimation.py  test_estimation_factories.py  test_genetic_pf.py  test_initial_orbit_determination.py  test_maneuver_detection.py  test_stacking.py  test_ukf.py  ukf_support.py
tests/filters/: test_maneuver_detection.py
tests/integration/: test_estimation_integration.py  test_event_integration.py  test_scenario_integration.py
tests/job_handlers/: conftest.py  test_async_functions.py  test_job_handlers.py
tests/parallel/: conftest.py  test_handlers.py  test_parallel.py  test_redis.py
tests/physics/: conftest.py  test_bodies.py  test_earth_orientation_params.py  test_grav_potential.py  test_math.py  test_measurement_utils.py  test_measurements.py  test_nutation.py  test_orbit_determination.py  test_reductions.py  test_sensor_utils.py  test_statistics.py  test_transforms.py
tests/regression/: test_scenario_regression.py
tests/scenario/: test_engine_config.py  test_scenario.py  test_scenario_builder.py  test_scenario_clock.py  test_scenario_config.py
tests/sensors/: conftest.py  test_field_of_view.py  test_fov.py  test_measurement.py  test_measurements.py  test_optical.py  test_radar.py  test_sensor_base.py  test_sensors.py
tests/services/: test_resonaate_service.py
tests/tasking/: conftest.py  test_decisions.py  test_engine.py  test_metrics.py  test_predictions.py  test_rewards.py
(+317 files in other folders)
